# catweek

./: .gitignore  README.md  ci-build.sh  docker-compose.prod.yaml  docker-compose.yaml  dump-postgres-202512121540.sql  main.py  requirements.txt  tree.txt
backend/: .dockerignore  .env.example  Dockerfile  HTTPRequests.http  README.md  entrypoint.py  entrypoint.sh  manage.py  project_tree.txt  pyproject.toml  test_results.txt  tree.txt  wsgi.py
backend/app/: __init__.py  cli.py  config.py  extensions.py  swagger_template.py  utils.py
backend/app/core/: __init__.py  config.py  context.py
backend/app/data/: days.py  lecturers.py  lessons.py  slots.py  specialties.py  student_groups.py  venues.py
backend/app/db/: session.py  setup.py
backend/app/models/: __init__.py  schedule.py  schedule_tables.py
backend/app/parsers/: yaml_handler.py
backend/app/repositories/: __init__.py  lookup.py  schedule.py  schedule_repository.py
backend/app/schemas/: __init__.py  api_responses.py  lookup.py  responses.py  schedule.py
backend/app/scripts/: import_schedules.py  manager.py  relations.py  schedule.py  seed_manager.py  setup_db.py  simple.py
backend/app/services/: __init__.py  database.py  id_resolver.py  schedule_importer.py
backend/app/utils/: __init__.py  db.py  excel_parser_WIP.py  logging_config.py  resolvers.py  security.py  time.py  yaml_parser.py
backend/data/excel/: 1ТИЖДЕНЬ_ІІ_семестр.xlsx
backend/data/schedules/: README.MD  yaml-autocomplete-config.json
backend/migrations/: env.py
backend/migrations/versions/: 052d1ddcbbd8_initial_migration.py  1f4578e2ed80_initial_migration.py  (+4 more)
backend/tests/: conftest.py
(+153 files in other folders)
